Wrapping problem fixed for tables.
git-svn-id: svn+ssh://huia.bic.mni.mcgill.ca/home/cbrain/cbrain_repo/trunk@620 bcc1f7e1-216c-4ce3-888e-c5a8bb225047

--- a/BrainPortal/public/stylesheets/cbrain.css
+++ b/BrainPortal/public/stylesheets/cbrain.css
@@ -793,6 +793,7 @@ td.taskinfo {
     font-weight: bold;
     font-size: 11px;
     color: #ffffff;
+    white-space: nowrap;
 }
 
 .resource_list th a {
@@ -810,6 +811,7 @@ td.taskinfo {
     text-align: center;
     padding-left: 2em;
     padding-right: 2em;
+    white-space: nowrap;
 }
 
 /*.resource_list td.left {
